<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_camera">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="org.staacks.alpharemote.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="org.staacks.alpharemote.ui.about.AboutFragment"
        android:label="@string/title_about" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="org.staacks.alpharemote.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
    </fragment>
    <fragment
        android:id="@+id/navigation_settings2"
        android:name="org.staacks.alpharemote.ui.settings2.Settings2Fragment"
        android:label="Settings2Fragment" />

</navigation>