<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".ui.settings.SettingsFragment">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fragment_margin"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        style="@style/LinearSettings"
        >
        <TextView
            android:id="@+id/custom_buttons_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        <!-- Camera -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headline_margin_top"
            android:layout_marginBottom="@dimen/headline_margin_bottom"
            android:text="@string/settings_camera"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:id="@+id/tv_bluetooth_disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorError"
            android:text="@string/settings_bluetooth_disabled"
            android:visibility="gone" />
        <TextView
            android:id="@+id/tv_ble_scanning_disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorError"
            android:text="@string/settings_ble_scanning_disabled"
            android:visibility="gone" />
        <TextView
            android:id="@+id/tv_camera_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_camera_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorTextConnected"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_camera_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorTextError"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_camera_not_associated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/settings_camera_not_associated" />
        <TextView
            android:id="@+id/tv_camera_not_bonded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorTextError"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_camera_remote_disabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorTextError"
            android:visibility="gone"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:buttonBarStyle">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <Button
                android:id="@+id/btn_camera_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|center_vertical"
                app:icon="@drawable/button_ble_scan"
                android:visibility="gone"
                android:text="@string/settings_camera_add" />
            <Button
                android:id="@+id/btn_camera_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal|center_vertical"
                app:icon="@drawable/baseline_remove_circle_outline_24"
                android:visibility="gone"
                android:text="@string/settings_camera_remove" />
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <Button
                android:id="@+id/btn_help_connection"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/help"
                android:gravity="center_horizontal|center_vertical"
                app:icon="@drawable/baseline_help_24"
                >
            </Button>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
        </LinearLayout>
        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_permission_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Custom buttons -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headline_margin_top"
            android:layout_marginBottom="@dimen/headline_margin_bottom"
            android:text="@string/settings_custom_buttons"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/settings_custom_buttons_explanation"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/custom_buttons_list"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:buttonBarStyle">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <Button
                android:id="@+id/add_custom_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_custom_buttons_add" />
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
            <Button
                android:id="@+id/btn_help_custom_buttons"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help"
                android:gravity="center_horizontal|center_vertical"
                app:icon="@drawable/baseline_help_24"
                >
            </Button>
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" >
            </Space>
        </LinearLayout>
        <!-- Notification button size + Broadcast control -->
        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/compose_settings_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/headline_margin_top" />
    </LinearLayout>
</ScrollView>
