<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/cap_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/cap_title"
        app:layout_constraintTop_toTopOf="@id/cap_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ca_stop"
        android:importantForAccessibility="no"
        app:tint="?android:colorForeground" />

    <TextView
        android:id="@+id/cap_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_name_stop"
        app:layout_constraintStart_toEndOf="@id/cap_icon"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_min="32dp"
        android:lines="1"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <ImageButton
        android:id="@+id/cap_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_delete_24"
        android:backgroundTint="?attr/colorSecondary"
        app:tint="?attr/colorOnSecondary"
        android:visibility="gone"
        android:text="@string/delete" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cap_action_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cap_action_label, cap_action" />

    <TextView
        android:id="@+id/cap_action_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/action"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cap_title" />

    <Spinner
        android:id="@+id/cap_action"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cap_action_label"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cap_selftimer_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cap_selftimer_enable, cap_selftimer, cap_selftimer_seconds" />

    <CheckBox
        android:id="@+id/cap_selftimer_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/self_timer"
        android:labelFor="@id/cap_selftimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cap_selftimer"
        app:layout_constraintBottom_toBottomOf="@id/cap_selftimer" />

    <SeekBar
        android:id="@+id/cap_selftimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:min="0"
        android:max="120"
        app:layout_constraintEnd_toStartOf="@id/cap_selftimer_seconds"
        app:layout_constraintStart_toEndOf="@id/cap_selftimer_enable"
        app:layout_constraintTop_toBottomOf="@id/cap_action"
        app:layout_constraintWidth_min="40dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/cap_selftimer_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/cap_selftimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cap_selftimer"
        app:layout_constraintBottom_toBottomOf="@id/cap_selftimer" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cap_hold_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cap_hold_enable, cap_hold, cap_hold_seconds" />

    <CheckBox
        android:id="@+id/cap_hold_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hold_button"
        android:labelFor="@id/cap_hold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cap_hold"
        app:layout_constraintBottom_toBottomOf="@id/cap_hold" />

    <SeekBar
        android:id="@+id/cap_hold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:min="0"
        android:max="120"
        app:layout_constraintEnd_toStartOf="@id/cap_hold_seconds"
        app:layout_constraintStart_toEndOf="@id/cap_hold_enable"
        app:layout_constraintTop_toBottomOf="@id/cap_selftimer"
        app:layout_constraintWidth_min="40dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/cap_hold_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/cap_hold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cap_hold"
        app:layout_constraintBottom_toBottomOf="@id/cap_hold" />

    <CheckBox
        android:id="@+id/cap_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_button"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cap_hold" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cap_speed_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cap_speed_label, cap_speed" />

    <TextView
        android:id="@+id/cap_speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/speed"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cap_toggle" />

    <SeekBar
        android:id="@+id/cap_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:min="0"
        android:max="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cap_speed_label"
        />

    <Button
        android:id="@+id/cap_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cap_speed"
        android:text="@string/save" />

    <Button
        android:id="@+id/cap_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@id/cap_save"
        app:layout_constraintTop_toBottomOf="@id/cap_speed"
        android:text="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>