<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/status_focus"
        android:layout_width="@dimen/notification_status_size"
        android:layout_height="@dimen/notification_status_size"
        android:layout_margin="2dp"
        android:src="@drawable/status_focus"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/status_focus" />

    <ImageView
        android:id="@+id/status_shutter"
        android:layout_width="@dimen/notification_status_size"
        android:layout_height="@dimen/notification_status_size"
        android:layout_margin="2dp"
        android:src="@drawable/status_shutter"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/status_focus"
        android:contentDescription="@string/status_shutter" />

    <ImageView
        android:id="@+id/status_recording"
        android:layout_width="@dimen/notification_status_size"
        android:layout_height="@dimen/notification_status_size"
        android:layout_margin="2dp"
        android:src="@drawable/status_recording"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/status_shutter"
        android:contentDescription="@string/status_recording" />

    <TextView
        android:id="@+id/status_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/status_offline"
        android:layout_alignParentStart="true"
        android:layout_below="@id/status_recording"
        android:layout_alignEnd="@id/status_recording"
        android:textSize="@dimen/notification_status_name_size"
        android:maxLines="1"
        />

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:clipChildren="true"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/status_recording"
        android:layout_toStartOf="@id/status_countdown"
        >

        <include layout="@layout/custom_button_notification" android:id="@+id/button0" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button1" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button2" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button3" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button4" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button5" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button6" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button7" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button8" />
        <include layout="@layout/custom_button_notification" android:id="@+id/button9" />

    </LinearLayout>

    <TextView
        android:id="@+id/status_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_toStartOf="@id/status_countdown"
        android:layout_alignStart="@id/action_buttons"
        android:layout_alignTop="@id/action_buttons"
        android:layout_alignBottom="@id/action_buttons"
        android:layout_centerVertical="true"
        android:gravity="end|center_vertical"
        android:visibility="gone"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:text=""
        />

    <Chronometer
        android:id="@+id/status_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/action_buttons"
        android:layout_alignBottom="@id/action_buttons"
        android:layout_centerVertical="true"
        android:gravity="start|center_vertical"
        android:countDown="true"
        android:visibility="gone"
        style="@style/TextAppearance.Compat.Notification.Title"
        />

</RelativeLayout>